@@ -1,4 +1,5 @@
 ver 0.23.16 (not yet released)
+* support libfmt 11
 
 ver 0.23.15 (2023/12/20)
 * decoder
